add wine page update

--- a/public/template/add_wine_year_detail_1.html
+++ b/public/template/add_wine_year_detail_1.html
@@ -39,7 +39,7 @@
     </div>
     <div id="wrapper950" >
     	<div class="whitespace addwine">
-            <h1 class="main_title">添加藏酒</h1>
+            <h1 class="main_title">添加酒款</h1>
             <div class="step">
                 <div class="step_sec"></div>
           </div>
@@ -64,6 +64,7 @@
                        <select name="">
                              <option>请选择年份</option>
                      </select>
+                     <label class="nv"><input name="" type="checkbox" value="" />NV/无年份葡萄酒</label>
                   </div>
                    <div class="required">
                        <label>容量</label>
