--- a/public/template/add_wine_new_detail_1.html
+++ b/public/template/add_wine_new_detail_1.html
@@ -39,7 +39,7 @@
     <div id="wrapper950">
     	<div class="whitespace">
     	<div class="addwine">
-            <h1 class="main_title">添加藏酒</h1>
+            <h1 class="main_title">添加酒款</h1>
             <div class="step">
                 <div class="step_sec"></div>
           </div>
@@ -72,6 +72,7 @@
                        <select name="">
                              <option>2012</option>
                      </select>
+                     <label class="nv"><input name="" type="checkbox" value="" />NV/无年份葡萄酒</label>
                   </div>
                    <div class="required">
                        <label><span>*</span>容量</label>
