--- a/app/views/themes/waterfall/static/home.html.erb
+++ b/app/views/themes/waterfall/static/home.html.erb
@@ -1,2 +1,5 @@
-<% title @title %>
-<h2>首页</h2>
+ <div class="whitespace">
+ 	<%= title @title %>
+ 	<p>Coming Soon...</p>
+ 	<div class="clear"></div>
+ </div>
