--- a/app/assets/themes/waterfall/stylesheets/main.css
+++ b/app/assets/themes/waterfall/stylesheets/main.css
@@ -82,7 +82,6 @@ input.common_search {width:250px;}
 .nor_notice {font-size:14px;}
 
 /* ------- My Form ----------*/
-.myform{}
 .myform .left {width:500px;float:left;margin-right:20px;}
 .myform .right {float:left;}
 /*--------- stylized ---------- */
@@ -108,15 +107,15 @@ textarea.wine_intro {width:500px;height:200px;}
 
 /*----------login register---------*/
 #login {width:772px;margin:0 auto;padding-top:30px;}
-#login .error, #register .error {margin-bottom:20px;}
-.login .boxstyle {margin: 0 20px 0 0;}
+#login .error{margin-bottom:20px;}
+.login .boxstyle {margin: 0 20px 0 0;_margin:0 18px 0 0;}
 .boxstyle {width:376px;background:url(../images/bg/login_m.gif) repeat-y left top;float:left;}
 .boxstyle .top {background:url(../images/bg/login_t.gif) no-repeat left top;height:55px;text-align:center; line-height:50px;padding-top:6px;font-size:16px;font-weight:bold;color:#666;}
 .boxstyle .bot {background:url(../images/bg/login_b.gif) no-repeat left bottom;height:12px;}
 .login .boxstyle .mid {padding:20px 28px;height:150px;}
 .register .boxstyle .mid {padding:60px 28px 20px 28px;height:110px;}
 .boxstyle input.text {border:1px solid #fff;background-color:#fff;height:25px;width:300px;padding:0;line-height:25px; vertical-align:middle;}
-.boxstyle .un, .boxstyle .pw {background:url(../images/bg/login_input.jpg) no-repeat left top;height:27px;padding:8px 10px;width:300px;margin:0 0 10px 0;}
+.boxstyle .un, .boxstyle .pw {background:url(../images/bg/login_input.jpg) no-repeat left top;padding:8px 10px;width:300px;margin:0 0 10px 0;}
 .boxstyle .rember_pw {line-height:41px;}
 .boxstyle .rember_pw a:hover {text-decoration:none;}
 #register {width:376px;margin:0 auto;padding-top:30px;}
@@ -124,6 +123,7 @@ textarea.wine_intro {width:500px;height:200px;}
 #register p {font-size:13px;padding:0 0 5px 5px;}
 #register .location {padding-left:5px;}
 #register .submit {margin-top:20px;line-height:51px; overflow:hidden;}
+#register .message {color:#C00;padding:10px 0 0 0;display:block;}
 
 /*-------------first recommend--------------*/
 #recommend .wel {background:url(../images/common/recommend_top.jpg) no-repeat left top;height:138px;padding:40px 0 0 70px;}
@@ -149,7 +149,7 @@ textarea.wine_intro {width:500px;height:200px;}
 /*icon*/
 .icon_mail, .icon_like, .icon_add_album, .icon_delet, .icon_edit, .icon_add, .icon_delet2, .icon_comment, .icon_fol, .icon_fol_e, .icon_cellar {background:url(../images/icon/icon_all.gif) no-repeat;display:inline-block;}
 a.icon_delet, a.icon_edit, a.icon_add, a.icon_delet2, a.icon_cellar {text-indent: -9999px;display:inline-block;}
-a.icon_mail {background-position: 0 2px;display:inline-block;padding:0 0 0 20px;}
+a.icon_mail {background-position:0 4px;_background-position:0 2px;background-position:0 2px\0;display:inline-block;padding:0 0 0 20px;}
 a.icon_like {background-position: 0 -16px;padding:0 0 0 20px;}
 a.icon_add_album {background-position: 0 -35px;padding:0 0 0 20px;height:17px;line-height:17px;}
 a.icon_delet {background-position:0 -56px;height:13px;width:13px;}
@@ -171,12 +171,12 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .cancl_fol a {color:#a8bbc6;}
  
 /*--------------star style---------------*/
-.star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5, .star_s_h, .star_s1_h, .star_s2_h, .star_s3_h, .star_s4_h, .star_s5_h {background:url(../images/icon/allstar.gif) no-repeat;display:inline-block;width:65px;height:12px;}
+.star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5, .star_s_h, .star_s1_h, .star_s2_h, .star_s3_h, .star_s4_h, .star_s5_h {background:url(../images/icon/allstar.gif) no-repeat;display:inline-block;width:65px;height:12px;_height:7px;}
 .star_b_s00, .star_b_s05, .star_b_s10, .star_b_s15, .star_b_s20, .star_b_s25, .star_b_s30, .star_b_s35, .star_b_s40, .star_b_s45, .star_b_s50 {background:url(../images/icon/allstar.gif) no-repeat;display:inline-block;width:79px;height:14px;}
 .star_s5 {background-position: 0 0;}
 .star_s4_h {background-position: 0 -13px;}
 .star_s4 {background-position: 0 -25px;}
-.star_s3_h {background-position: 0 -37px;}
+.star_s3_h {background-position: 0 -37px;_background-position: 0 -35px;}
 .star_s3 {background-position: 0 -49px;}
 .star_s2_h {background-position: 0 -61px;}
 .star_s2 {background-position: 0 -73px;}
@@ -241,7 +241,8 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .comment_post_star .star_rate {margin:5px 0 10px 0;}
 
 /*-------User list--------*/
-.userlist li {width:170px;float:left;margin:0 10px 30px 10px;}
+.userlist {zoom:1;}
+.userlist li {width:170px;float:left;padding:0 10px 30px 10px;_pading:0 10px 20px 10px;zoom:1;}
 .userlist .userpic {width:50px;float:left;margin-right:15px;}
 .userlist .userinfo {width:105px;float:left;}
 .userlist .userinfo .userlocation {color:#999;}
@@ -251,13 +252,14 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
 
 /*header*/
-#header {background:url(../images/bg/header_bg.png) repeat-x top left; height:52px;color:#fff; position:relative;padding-top:8px;box-shadow: 0 1px 2px 1px #E0E0E0;}
+#header {background:url(../images/bg/header_bg.png) repeat-x top left; height:52px;color:#fff; position:relative;padding-top:8px;box-shadow: 0 1px 2px 1px #E0E0E0;z-index:1;}
 #header .main950 {width:950px;margin:0 auto;position:relative;}
 #header .main860 {width:860px;margin:0 auto;}
 #header #logo {width:300px;float:left;}
 #header #top_search {float:left;width:350px;margin:5px 0 0 20px;}
 #header #top_right {float:right;padding-top:5px;}
 #header #top_right ul li {float:right;margin-left:5px;}
+#header #top_right .userbox {position:relative;}
 #header #top_right .userbox .userpic {width:20px;height:20px;border:5px solid #f5f3f3;}
 #header #top_right .userbox .userpic img {width:20px;height:20px;}
 #header #top_right .userbox a {float:left;}
@@ -268,23 +270,26 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
     display: none;
     position: absolute;
     z-index: 10000;
-    background: #F5F3F3;
-    top: 42px;
-    -moz-border-radius: 3px;
+    background: #f3f3f3;
+    top: 32px;
+    left: -67px;
+    border:1px solid #ccc;
+    /* -moz-border-radius: 3px;
     -webkit-border-radius: 3px;
-    border-radius: 2px 0 2px 2px;
-    padding-left: 10px;
-    opacity: 0.9;
+    border-radius: 2px 0 2px 2px;    
+    opacity: 0.9;*/
 }
 .header-content ul.user_nav .drop_down_menu li {
     float: none;
 }
+#header #top_right .drop_down_menu li {border-bottom:1px solid #ddd;float:none;margin-left:0;}
+#header #top_right .drop_down_menu li  a {float:none;}
 .drop_down_menu li a {
     display: block;
-    width: 111px;
     padding: 5px 10px;
     text-decoration: none;
 }
+.drop_down_menu li a:hover {background-color:#fff;}
 .search_scroll {width:348px; position:absolute;left:320px;top:38px;border:1px solid #999;border-top:none;background-color: #fff;border-radius:3px 3px 3px 3px;color:#333;z-index:1;}
 .search_scroll .current {background-color:#f3f3f3;}
 .search_scroll p.title a  {display:block;border-top:1px solid #ccc;padding:5px 10px;}
@@ -367,7 +372,7 @@ a.btn_green:hover span {background-position:right -92px;}
 .wine_list .wine_info h2, .addwine .box .wine_info h2 {font-size:14px;}
 .wine_list .wine_info h3, .addwine .box .wine_info h3 {font-size:12px;font-weight:normal;color:#666;}
 .box590 {margin: 0 0 10px 0;}
-.box590_t {background:url(../images/bg/bg_box590_t.gif) no-repeat left top;height:10px;}
+.box590_t {background:url(../images/bg/bg_box590_t.gif) no-repeat left top;overflow:hidden;height:10px;}
 .box590_b {background:url(../images/bg/bg_box590_b.gif) no-repeat left bottom;height:20px;}
 .box590_main {background:url(../images/bg/bg_box590_m.gif) repeat-y left top;padding:5px 15px 0 15px;}
 
