--- a/app/views/themes/waterfall/layouts/_footer.html.erb
+++ b/app/views/themes/waterfall/layouts/_footer.html.erb
@@ -1,4 +1,13 @@
 <div id="footer">
-	<div class="link"><a href="#">关于我们</a> | <a href="#">联系我们</a> | <a href="#">帮助中心</a> | <a href="#">隐私条款</a> | <a href="#">用户协议</a> | <a href="#">网站地图</a> | <a href="#">意见反馈</a></div>
-	<div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
+	<div class="link">
+		<% foot_nav = { :about_us => '/about_us', 
+						:contact_us => '/contact_us',
+						:help => '/help', 
+						:private => '/private',
+						:site_map => '/site_map',
+						:feedback => '/feedback'} %>
+		<%= raw foot_nav.collect { |k, v| link_to t("nav.#{k}"), v }.join(" | ") %>
+		
+	</div>
+	<div class="copyright">Copyright © <%= Time.now.year %> iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
 </div>
