Bugs fixed with albums.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/themes/waterfall/albums/edit.html.erb
+++ b/app/views/themes/waterfall/albums/edit.html.erb
@@ -4,7 +4,7 @@
 <div class="clear"></div>
 
 <div class="title_btn">
-  <%= link_to albums_path, :class => "btn_gray float_r"  do  %>
+  <%= link_to albums_user_path(@user), :class => "btn_gray float_r"  do  %>
   <span>返回相册首页</span>
   <% end %>
   <h1>编辑相册属性 </h1>
