--- a/app/views/themes/waterfall/cellars/_show_cellar.html.erb
+++ b/app/views/themes/waterfall/cellars/_show_cellar.html.erb
@@ -11,6 +11,7 @@
               <% end %>
             </div>
         <% end %>
+        <% # TODO: 添加搜索功能  %>
         <div class="sort pt5">排序 <select name="">
           <option>价格</option>
           <option>数量</option>
