--- a/app/views/themes/waterfall/albums/delete.html.erb
+++ b/app/views/themes/waterfall/albums/delete.html.erb
@@ -1,18 +1,17 @@
-<div class="popup_header">
-  <a href="javascript:void(0);" onclick="$.fancybox.close(true);" class="close"></a>
-</div>
-<div class="popup_content">
-  <div class="confirm">确定要删除这个相册吗？
-    <p class="red mt20">注意：删除本相册将会同时删除本相册的所有照片！</p>
-  </div>
-</div>
-<div class="popup_footer">
-  <div class="wine_bid_btn margin_auto" style="width:93px;">
-    <a href="javascript:;" onclick="$.fancybox.close(true);" class="button_gray float_r" ><span>取消</span></a>
+
+
+  <h3 class="title">确定要删除这这个相册?</h3>
+  <div class="popup_content">
+    <div class="confirm">
+
+<p class="red mt20">注意：删除本相册将会同时删除本相册的所有照片！</p>
+
+        <a href="javascript:;" onclick="$.fancybox.close(true);" class="btn_gray float_l mr5" ><span>取消</span></a>
     <%= form_tag :action => 'delete' do %>
-    <a href="javascript:;" onclick="$(this).parent().submit();$.fancybox.close(true);" class="button_gray float_r mr5"><span>确定</span></a>
+    <a href="javascript:;" onclick="$(this).parent().submit();$.fancybox.close(true);" class="btn_gray float_l"><span>确定</span></a>
     <input type="hidden" name="album_id" value="<%= params[:album_id] %>" />
     <% end %>
-    <div class="clear"></div>
-  </div>
-</div>
+
+      <div class="clear"></div>
+    </div>
+    </div
