--- a/app/views/themes/waterfall/friends/_all_sns.html.erb
+++ b/app/views/themes/waterfall/friends/_all_sns.html.erb
@@ -6,10 +6,7 @@
     <% end %>
   </p>
   <p>
-    <%= link_to sync_friends_path, :class => "btn_gray mr5" do %>
-        <span>搜索全部同步项</span>
-    <% end %>
-    <%= link_to "#", :class => "btn_gray" do %>
+    <%= link_to setting_sns_friends_path(), :class => "btn_gray" do %>
         <span>更改同步设置</span>
     <% end %>
   </p>
