--- a/app/views/themes/waterfall/settings/basic.html.erb
+++ b/app/views/themes/waterfall/settings/basic.html.erb
@@ -54,7 +54,7 @@
       <div class="optional">
         <label style="padding-top:13px;">同步设置</label>
         <%= render "friends/icons" %>
-        <%= link_to "#", :class => "btn_gray ml10" do %>
+        <%= link_to setting_sns_friends_path, :class => "btn_gray ml10" do %>
         <span>更改同步设置</span>
         <% end %>
       </div>
