--- a/app/views/themes/waterfall/share/_sns_icons.html.erb
+++ b/app/views/themes/waterfall/share/_sns_icons.html.erb
@@ -1,7 +1,22 @@
-分享到：
-<%= link_to_image "icon/sina_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-<%= link_to_image "icon/tencen_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-<%= link_to_image "icon/douban_s_on.png","#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-<%= link_to_image "icon/kaixin_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
-<%= link_to_image "icon/renren_s_on.png", "#", {}, {:width => 17, :height => 17, :align => :absmiddle, :alt => "腾讯"} %>
+<!-- JiaThis Button BEGIN -->
+<div id="ckepop"><span class="jiathis_txt">分享到：</span>
+  <a class="jiathis_button_tsina"></a>
+  <a class="jiathis_button_tqq"></a>
+  <a class="jiathis_button_renren"></a>
+  <a class="jiathis_button_douban"></a>
+  <a href="http://www.jiathis.com/share?uid=1623461" class="jiathis jiathis_txt jiathis_separator jtico jtico_jiathis" target="_blank"></a>
+</div>
+<script type="text/javascript" >
+    var jiathis_config={
+        data_track_clickback:true,
+        url:"http://www.iwine.com",
+        summary:"专业的红酒社区",
+        title:"爱红酒，爱生活 #红酒#",
+        pic:"http://localhost:3000/assets/waterfall/images/common/logo.gif",
+        hideMore:false
+    }
+</script>
+<script type="text/javascript" src="http://v2.jiathis.com/code_mini/jia.js?uid=1623461" charset="utf-8"></script>
+<!-- JiaThis Button END -->
+
 
