--- a/public/template/add_wine_not_exist.html
+++ b/public/template/add_wine_not_exist.html
@@ -39,7 +39,7 @@
     </div>
     <div id="wrapper950">
     	<div class="whitespace addwine">
-            <h1 class="main_title">添加藏酒</h1>
+            <h1 class="main_title">添加酒款</h1>
             <div class="step">
                 <div class="step_fir"></div>
           </div>
