--- a/public/template/winery_profile.html
+++ b/public/template/winery_profile.html
@@ -66,33 +66,39 @@
                     </div>
                 </div>
                 <div class="right">
-                	<div class="share">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                    <div class="score_star mb20">
+                        <span class="star star_b_s45"></span>
+                        <span class="iw_score"><span class="redscore">8.5</span> 分，32人评价</span>
+                        <div class="clear"></div>
+                    </div>
                     <ul class="item">
                     	<li>
-                            <p class="pic"><img src="images/icon/winery_photo.gif" width="34" height="26" /></p>
+                            <p class="pic"><a href="#01"><img src="images/icon/winery_photo.gif" width="34" height="26" /></a></p>
                             <p><a href="#01">照片</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_intro.gif" width="26" height="30" /></p>
+                            <p class="pic"><a href="#02"><img src="images/icon/winery_intro.gif" width="26" height="30" /></a></p>
                             <p><a href="#02">介绍</a></p>
                         </li>
                         <li class="last">
-                            <p class="pic"><img src="images/icon/winery_hot.gif" width="32" height="32" /></p>
+                            <p class="pic"><a href="#05"><img src="images/icon/winery_hot.gif" width="32" height="32" /></a></p>
                             <p><a href="#05">热门酒款</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_wine.gif" width="24" height="37" /></p>
+                            <p class="pic"><a href="#03"><img src="images/icon/winery_wine.gif" width="24" height="37" /></a></p>
                             <p><a href="#03">所有酒款</a></p>
                         </li>
                         <li>
-                            <p class="pic"><img src="images/icon/winery_comment.gif" width="34" height="31" /></p>
+                            <p class="pic"><a href="#04"><img src="images/icon/winery_comment.gif" width="34" height="31" /></a></p>
                             <p><a href="#04">评论</a></p>
                         </li>
-                        <li class="last">
-                            <p class="pic"><img src="images/icon/winery_follower.gif" width="31" height="36" /></p>
+                      <li class="last">
+                          <p class="pic"><a href="#06"><img src="images/icon/winery_follower.gif" width="31" height="36" /></a></p>
                             <p><a href="#06">关注者</a></p>
-                        </li>
+                      </li>
+                        <div class="clear"></div>
                     </ul>
+                    <div class="share">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                 </div>
                 <div class="clear"></div>
             </div>
