--- a/public/template/lightbox_add.html
+++ b/public/template/lightbox_add.html
@@ -37,17 +37,17 @@
       </ul>
     </div>
          
-         <div class="fancybox-wrap fancybox-default fancybox-opened" style="width: 500px; height: auto; display: block; position: fixed; top: 267px; left: 592px; overflow: visible;">
+         <div class="fancybox-wrap fancybox-default fancybox-opened" style="width: 500px; height: auto; display: block; position: fixed; top: 267px; left: 592px;">
             <div class="fancybox-outer">
-                <div class="fancybox-inner" style="overflow: auto;">
+                <div class="fancybox-inner">
                     <div id="add_data" style="display: block;">
                         <h3>请选择要添加的内容类型</h3>
                         <ul>
                             <li>
-                                <a  class="add_new_wine" href="#">添加新酒款</a>
+                                <a class="add_new_wine" href="#">添加新酒款</a>
                             </li>
                             <li>
-                                <a  class="add_cellar_wine" href="#">添加藏酒</a>
+                                <a class="add_cellar_wine" href="#">添加藏酒</a>
                             </li>
                             <div class="clear"></div>
                         </ul>
